# azure-pipeline-cpp

./: .gitignore  CMakeLists.txt  README.md  __pyproject.toml  main.cpp  setup.py
ci/: build.yml
demo/: CMakeLists.txt  conanfile.txt
demo/bindings/: conanfile.txt  demo_python.cpp
demo/bindings/python_examples/: demo.py
demo/examples/: demo_example.cpp
demo/include/demo/: foo.hpp
demo/src/: foo.cpp
demo/tests/: test_demo.cpp
scripts/: requirements.txt
scripts/cmake/: build.py  configure.py  install.py
scripts/conan/: global.conf  install.py  profile.py  profile_v1.py
scripts/conan/profiles/: linux_clang15  linux_gcc12  macos_clang14  macos_gcc12  windows_msvc17
src/: main.cpp
